Setup gulp livereload

--- a/app/src/main/webapp/static/html/not-found.html
+++ b/app/src/main/webapp/static/html/not-found.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Error!</title>
-    <link rel="stylesheet" type="text/css" href="../css/error.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/error.css"/>
 </head>
 <body class="container" style="background: #f00;">
 <div class="container-centered">
