--- a/app/src/main/webapp/static/html/not-found.html
+++ b/app/src/main/webapp/static/html/not-found.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Error!</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/error.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/not-found.css"/>
 </head>
-<body class="container" style="background: #f00;">
+<body class="container">
 <div class="container-centered">
     No tengo la pagina
 </div>
